--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,15 +86,13 @@
         <footer id="footer-sponsors-support">
 
             <p class="text-center footer-legal">
-                <span class="footer-grey">Ein Event der Microsoft Student Partner Deutschland</span> |
-                <a href="https://www.menux.de/imprint" target="_blank">Impressum</a> |
+                <span class="footer-grey">Studentisches Ehrenamt in Freiburg</span> |
+                <a href="/impressum">Impressum</a> |
                 <a href="/datenschutz">Datenschutz</a>
                 <br />
                 We ❤ Open Source.<br />
-                The original <a href="http://4hourventure.com/">4 Hour Venture</a> (4HV)
-                Event was created in 2010 by <a href="http://andreasdittes.de/" target="_blank">Andreas Dittes</a>.<br />
-                <span class="footer-small">Bearbeite diese Seite auf <i class="fa fa-github" aria-hidden="true"></i>
-          <a href="https://github.com/MENUX/4-Hour-Venture" target="_blank">GitHub</a>.</span>
+                Diese Seite wurde mit Hilfe von GithubPages erstellt.
+                Besonderer Dank geht an Marcel Engelmann!
             </p>
 
         </footer>
