--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,44 +41,7 @@
 
 <body onload="loadScript()">
 
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-        <a class="navbar-brand" href="#">
-            <img src="{{site.baseurl}}/assets/images/header-logo.png" width="100px" />
-        </a>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"></li>
-            </ul>
-
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#about">Überblick</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#schedule">Ablauf</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#location">Veranstaltungsort</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#faq">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#sponsors">Sponsoren</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">Kontakt</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link page-scroll" href="#participants">Mitmachen</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    
 
     {{ content }}
 
@@ -86,12 +49,12 @@
         <footer id="footer-sponsors-support">
 
             <p class="text-center footer-legal">
-                <span class="footer-grey">Studentisches Ehrenamt in Freiburg</span> |
+                <span class="footer-grey">Studentisches Ehrenamt in Freiburg</span> <br />
                 <a href="/impressum">Impressum</a> |
                 <a href="/datenschutz">Datenschutz</a>
                 <br />
                 We ❤ Open Source.<br />
-                Diese Seite wurde mit Hilfe von GithubPages erstellt.
+                Diese Seite wurde mit Hilfe von GitHubPages erstellt.<br />
                 Besonderer Dank geht an Marcel Engelmann!
             </p>
 
